package PaooGame.Tiles;

import java.awt.*;
import java.awt.image.BufferedImage;

import PaooGame.RefLinks;

/*! \class public class Tile
    \brief Retine toate dalele intr-un vector si ofera posibilitatea regasirii dupa un id.
 */
public class Tile
{
    private static final int NO_TILES   = 32;
    public static Tile[] tiles          = new Tile[NO_TILES];       /*!< Vector de referinte de tipuri de dale.*/

        /// De remarcat ca urmatoarele dale sunt statice si publice. Acest lucru imi permite sa le am incarcate
        /// o singura data in memorie
    public static Tile grassTile        = new GrassTile(0);     /*!< Dala de tip iarba*/
    public static Tile mountainTile     = new MountainTile(1);  /*!< Dala de tip munte/piatra*/
    public static Tile waterTile        = new WaterTile(2);     /*!< Dala de tip apa*/
    public static Tile treeTile         = new TreeTile(3);      /*!< Dala de tip copac*/
    public static Tile soilTile         = new SoilTile(4);      /*!< Dala de tip sol/pamant*/

    public static final int TILE_WIDTH  = 64;                       /*!< Latimea unei dale.*/
    public static final int TILE_HEIGHT = 64;                       /*!< Inaltimea unei dale.*/


    protected BufferedImage img;                                    /*!< Imaginea aferenta tipului de dala.*/
    protected final int id;                                         /*!< Id-ul unic aferent tipului de dala.*/

    /*! \fn public Tile(BufferedImage texture, int id)
        \brief Constructorul aferent clasei.

        \param image Imaginea corespunzatoare dalei.
        \param id Id-ul dalei.
     */
    public Tile(BufferedImage image, int idd)
    {
        img = image;
        id = idd;

        tiles[id] = this;
    }

    /*! \fn public void Update()
        \brief Actualizeaza proprietatile dalei.
     */
    public void Update()
    {

    }

    /*! \fn public void Draw(Graphics g, int x, int y)
        \brief Deseneaza in fereastra dala.

        \param g Contextul grafic in care sa se realizeze desenarea
        \param x Coordonata x in cadrul ferestrei unde sa fie desenata dala
        \param y Coordonata y in cadrul ferestrei unde sa fie desenata dala
     */
    public void Draw(Graphics g, int x, int y)
    {
            /// Desenare dala
        if (this.NeedsBackground())
        {
            /// first level default background for object == grass
            /// face ca fundalul sa fie o anumita dala, daca este un obicet liber
            g.drawImage(grassTile.img, x, y, TILE_WIDTH, TILE_HEIGHT, null);
        }
        g.drawImage(img, x, y, TILE_WIDTH, TILE_HEIGHT, null);
    }

    /*! \fn public boolean IsSolid()
        \brief Returneaza proprietatea de dala solida (supusa coliziunilor) sau nu.
     */
    public boolean IsSolid()
    {
        return false;
    }

    /*! \fn public boolean NeedsBackground()
        \brief Returneaza true daca are nevoie de background si false in caz contrar.
     */
    public boolean NeedsBackground()
    {
        return false;
    }

    /*! \fn public int GetId()
        \brief Returneaza id-ul dalei.
     */
    public int GetId()
    {
        return id;
    }

    public static int GetWidth()
    {
        return TILE_WIDTH;
    }

    public static int GetHeight()
    {
        return TILE_HEIGHT;
    }

}
