package PaooGame.Tiles;

import PaooGame.Graphics.Assets;

/*! \class public class TreeTile extends Tile
    \brief Abstractizeaza notiunea de dala de tip tree.
 */
public class TreeTile extends Tile
{
    /*! \fn public TreeTile(int id)
        \brief Constructorul de initializare al clasei

        \param id Id-ul dalei util in desenarea hartii.
     */
    public TreeTile(int id)
    {
        super(Assets.tree, id);
    }

    /*! \fn public boolean IsSolid()
        \brief Suprascrie metoda IsSolid() din clasa de baza in sensul ca va fi luat in calcul in caz de coliziune.
     */
    @Override
    public boolean IsSolid()
    {
        return true;
    }

    /*! \fn public boolean IsSolid()
        \brief Suprascrie metoda NeedsBackground() pentru a stabili daca are nevoie sau nu de fundal auxiliar.
     */
    @Override
    public boolean NeedsBackground()
    {
        return true;
    }
}
