@startuml

title __TILES's Class Diagram__\n

  namespace PaooGame {
    namespace Tiles {
      class PaooGame.Tiles.GrassTile {
          + GrassTile()
      }
    }
  }
  

  namespace PaooGame {
    namespace Tiles {
      class PaooGame.Tiles.MountainTile {
          + IsSolid()
          + MountainTile()
          + NeedsBackground()
      }
    }
  }
  

  namespace PaooGame {
    namespace Tiles {
      class PaooGame.Tiles.SoilTile {
          + SoilTile()
      }
    }
  }
  

  namespace PaooGame {
    namespace Tiles {
      class PaooGame.Tiles.Tile {
          {static} + TILE_HEIGHT : int
          {static} + TILE_WIDTH : int
          {static} + grassTile : Tile
          {static} + mountainTile : Tile
          {static} + soilTile : Tile
          {static} + tiles : Tile[]
          {static} + treeTile : Tile
          {static} + waterTile : Tile
          # id : int
          # img : BufferedImage
          {static} - NO_TILES : int
          + Draw()
          {static} + GetHeight()
          + GetId()
          {static} + GetWidth()
          + IsSolid()
          + NeedsBackground()
          + Tile()
          + Update()
      }
    }
  }
  

  namespace PaooGame {
    namespace Tiles {
      class PaooGame.Tiles.TreeTile {
          + IsSolid()
          + NeedsBackground()
          + TreeTile()
      }
    }
  }
  

  namespace PaooGame {
    namespace Tiles {
      class PaooGame.Tiles.WaterTile {
          + IsSolid()
          + WaterTile()
      }
    }
  }
  

  PaooGame.Tiles.GrassTile -up-|> PaooGame.Tiles.Tile
  PaooGame.Tiles.MountainTile -up-|> PaooGame.Tiles.Tile
  PaooGame.Tiles.SoilTile -up-|> PaooGame.Tiles.Tile
  PaooGame.Tiles.TreeTile -up-|> PaooGame.Tiles.Tile
  PaooGame.Tiles.WaterTile -up-|> PaooGame.Tiles.Tile


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
